// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HomeworkCard renders HomeworkCard 1`] = `
<div>
  <div
    class="ant-card ant-card-bordered"
    style="margin-bottom: 16px; display: block;"
  >
    <div
      class="ant-card-head"
    >
      <div
        class="ant-card-head-wrapper"
      >
        <div
          class="ant-card-head-title"
        >
          Homework Title
        </div>
        <div
          class="ant-card-extra"
        >
          <a
            href="/homeworkDetail/1"
          >
            查看
          </a>
        </div>
      </div>
    </div>
    <div
      class="ant-card-body"
    >
      <span
        class="ant-typography"
      >
        发布时间：
        2022/9/27 10:50:02
      </span>
      <br />
      <span
        class="ant-typography"
      >
        截止时间：
        2222/9/27 10:50:02
      </span>
      <div
        class="ant-divider ant-divider-horizontal"
        role="separator"
        style="margin: 16px 0px;"
      />
      <div>
        <span
          class="ant-avatar ant-avatar-sm ant-avatar-circle ant-avatar-icon"
          style="margin-top: -4px;"
        >
          <span
            aria-label="user"
            class="anticon anticon-user"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="user"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M858.5 763.6a374 374 0 00-80.6-119.5 375.63 375.63 0 00-119.5-80.6c-.4-.2-.8-.3-1.2-.5C719.5 518 760 444.7 760 362c0-137-111-248-248-248S264 225 264 362c0 82.7 40.5 156 102.8 201.1-.4.2-.8.3-1.2.5-44.8 18.9-85 46-119.5 80.6a375.63 375.63 0 00-80.6 119.5A371.7 371.7 0 00136 901.8a8 8 0 008 8.2h60c4.4 0 7.9-3.5 8-7.8 2-77.2 33-149.5 87.8-204.3 56.7-56.7 132-87.9 212.2-87.9s155.5 31.2 212.2 87.9C779 752.7 810 825 812 902.2c.1 4.4 3.6 7.8 8 7.8h60a8 8 0 008-8.2c-1-47.8-10.9-94.3-29.5-138.2zM512 534c-45.9 0-89.1-17.9-121.6-50.4S340 407.9 340 362c0-45.9 17.9-89.1 50.4-121.6S466.1 190 512 190s89.1 17.9 121.6 50.4S684 316.1 684 362c0 45.9-17.9 89.1-50.4 121.6S557.9 534 512 534z"
              />
            </svg>
          </span>
        </span>
        <span
          class="ant-typography"
          style="margin-left: 12px;"
        >
          <b>
            Teacher Name
          </b>
          布置的作业
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`HomeworkCard renders completed HomeworkCard 1`] = `
<div>
  <div
    class="ant-card ant-card-bordered"
    style="margin-bottom: 16px; display: block;"
  >
    <div
      class="ant-card-head"
    >
      <div
        class="ant-card-head-wrapper"
      >
        <div
          class="ant-card-head-title"
        >
          Homework Title
          <span
            class="ant-tag ant-tag-success"
            style="margin-left: 8px; vertical-align: middle;"
          >
            <span
              aria-label="check-circle"
              class="anticon anticon-check-circle"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="check-circle"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M699 353h-46.9c-10.2 0-19.9 4.9-25.9 13.3L469 584.3l-71.2-98.8c-6-8.3-15.6-13.3-25.9-13.3H325c-6.5 0-10.3 7.4-6.5 12.7l124.6 172.8a31.8 31.8 0 0051.7 0l210.6-292c3.9-5.3.1-12.7-6.4-12.7z"
                />
                <path
                  d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                />
              </svg>
            </span>
            <span>
              已完成
            </span>
          </span>
        </div>
        <div
          class="ant-card-extra"
        >
          <a
            href="/homeworkDetail/1"
          >
            查看
          </a>
        </div>
      </div>
    </div>
    <div
      class="ant-card-body"
    >
      <span
        class="ant-typography"
      >
        发布时间：
        2022/9/27 10:50:02
      </span>
      <br />
      <span
        class="ant-typography"
      >
        截止时间：
        2222/9/27 10:50:02
      </span>
      <div
        class="ant-divider ant-divider-horizontal"
        role="separator"
        style="margin: 16px 0px;"
      />
      <div>
        <span
          class="ant-avatar ant-avatar-sm ant-avatar-circle ant-avatar-icon"
          style="margin-top: -4px;"
        >
          <span
            aria-label="user"
            class="anticon anticon-user"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="user"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M858.5 763.6a374 374 0 00-80.6-119.5 375.63 375.63 0 00-119.5-80.6c-.4-.2-.8-.3-1.2-.5C719.5 518 760 444.7 760 362c0-137-111-248-248-248S264 225 264 362c0 82.7 40.5 156 102.8 201.1-.4.2-.8.3-1.2.5-44.8 18.9-85 46-119.5 80.6a375.63 375.63 0 00-80.6 119.5A371.7 371.7 0 00136 901.8a8 8 0 008 8.2h60c4.4 0 7.9-3.5 8-7.8 2-77.2 33-149.5 87.8-204.3 56.7-56.7 132-87.9 212.2-87.9s155.5 31.2 212.2 87.9C779 752.7 810 825 812 902.2c.1 4.4 3.6 7.8 8 7.8h60a8 8 0 008-8.2c-1-47.8-10.9-94.3-29.5-138.2zM512 534c-45.9 0-89.1-17.9-121.6-50.4S340 407.9 340 362c0-45.9 17.9-89.1 50.4-121.6S466.1 190 512 190s89.1 17.9 121.6 50.4S684 316.1 684 362c0 45.9-17.9 89.1-50.4 121.6S557.9 534 512 534z"
              />
            </svg>
          </span>
        </span>
        <span
          class="ant-typography"
          style="margin-left: 12px;"
        >
          <b>
            Teacher Name
          </b>
          布置的作业
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`HomeworkCard renders completed outdated HomeworkCard 1`] = `
<div>
  <div
    class="ant-card ant-card-bordered"
    style="margin-bottom: 16px; display: block;"
  >
    <div
      class="ant-card-head"
    >
      <div
        class="ant-card-head-wrapper"
      >
        <div
          class="ant-card-head-title"
        >
          Homework Title
          <span
            class="ant-tag ant-tag-success"
            style="margin-left: 8px; vertical-align: middle;"
          >
            <span
              aria-label="check-circle"
              class="anticon anticon-check-circle"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="check-circle"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M699 353h-46.9c-10.2 0-19.9 4.9-25.9 13.3L469 584.3l-71.2-98.8c-6-8.3-15.6-13.3-25.9-13.3H325c-6.5 0-10.3 7.4-6.5 12.7l124.6 172.8a31.8 31.8 0 0051.7 0l210.6-292c3.9-5.3.1-12.7-6.4-12.7z"
                />
                <path
                  d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                />
              </svg>
            </span>
            <span>
              已完成
            </span>
          </span>
        </div>
        <div
          class="ant-card-extra"
        >
          <a
            href="/homeworkDetail/1"
          >
            查看
          </a>
        </div>
      </div>
    </div>
    <div
      class="ant-card-body"
    >
      <span
        class="ant-typography"
      >
        发布时间：
        2022/9/27 10:50:02
      </span>
      <br />
      <span
        class="ant-typography"
      >
        截止时间：
        2022/9/27 10:50:02
      </span>
      <div
        class="ant-divider ant-divider-horizontal"
        role="separator"
        style="margin: 16px 0px;"
      />
      <div>
        <span
          class="ant-avatar ant-avatar-sm ant-avatar-circle ant-avatar-icon"
          style="margin-top: -4px;"
        >
          <span
            aria-label="user"
            class="anticon anticon-user"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="user"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M858.5 763.6a374 374 0 00-80.6-119.5 375.63 375.63 0 00-119.5-80.6c-.4-.2-.8-.3-1.2-.5C719.5 518 760 444.7 760 362c0-137-111-248-248-248S264 225 264 362c0 82.7 40.5 156 102.8 201.1-.4.2-.8.3-1.2.5-44.8 18.9-85 46-119.5 80.6a375.63 375.63 0 00-80.6 119.5A371.7 371.7 0 00136 901.8a8 8 0 008 8.2h60c4.4 0 7.9-3.5 8-7.8 2-77.2 33-149.5 87.8-204.3 56.7-56.7 132-87.9 212.2-87.9s155.5 31.2 212.2 87.9C779 752.7 810 825 812 902.2c.1 4.4 3.6 7.8 8 7.8h60a8 8 0 008-8.2c-1-47.8-10.9-94.3-29.5-138.2zM512 534c-45.9 0-89.1-17.9-121.6-50.4S340 407.9 340 362c0-45.9 17.9-89.1 50.4-121.6S466.1 190 512 190s89.1 17.9 121.6 50.4S684 316.1 684 362c0 45.9-17.9 89.1-50.4 121.6S557.9 534 512 534z"
              />
            </svg>
          </span>
        </span>
        <span
          class="ant-typography"
          style="margin-left: 12px;"
        >
          <b>
            Teacher Name
          </b>
          布置的作业
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`HomeworkCard renders outdated HomeworkCard 1`] = `
<div>
  <div
    class="ant-card ant-card-bordered"
    style="margin-bottom: 16px; display: block;"
  >
    <div
      class="ant-card-head"
    >
      <div
        class="ant-card-head-wrapper"
      >
        <div
          class="ant-card-head-title"
        >
          Homework Title
          <span
            class="ant-tag"
            style="margin-left: 8px; vertical-align: middle;"
          >
            已过期
          </span>
        </div>
        <div
          class="ant-card-extra"
        >
          <a
            href="/homeworkDetail/1"
          >
            查看
          </a>
        </div>
      </div>
    </div>
    <div
      class="ant-card-body"
    >
      <span
        class="ant-typography"
      >
        发布时间：
        2022/9/27 10:50:02
      </span>
      <br />
      <span
        class="ant-typography"
      >
        截止时间：
        2022/9/27 10:50:02
      </span>
      <div
        class="ant-divider ant-divider-horizontal"
        role="separator"
        style="margin: 16px 0px;"
      />
      <div>
        <span
          class="ant-avatar ant-avatar-sm ant-avatar-circle ant-avatar-icon"
          style="margin-top: -4px;"
        >
          <span
            aria-label="user"
            class="anticon anticon-user"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="user"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M858.5 763.6a374 374 0 00-80.6-119.5 375.63 375.63 0 00-119.5-80.6c-.4-.2-.8-.3-1.2-.5C719.5 518 760 444.7 760 362c0-137-111-248-248-248S264 225 264 362c0 82.7 40.5 156 102.8 201.1-.4.2-.8.3-1.2.5-44.8 18.9-85 46-119.5 80.6a375.63 375.63 0 00-80.6 119.5A371.7 371.7 0 00136 901.8a8 8 0 008 8.2h60c4.4 0 7.9-3.5 8-7.8 2-77.2 33-149.5 87.8-204.3 56.7-56.7 132-87.9 212.2-87.9s155.5 31.2 212.2 87.9C779 752.7 810 825 812 902.2c.1 4.4 3.6 7.8 8 7.8h60a8 8 0 008-8.2c-1-47.8-10.9-94.3-29.5-138.2zM512 534c-45.9 0-89.1-17.9-121.6-50.4S340 407.9 340 362c0-45.9 17.9-89.1 50.4-121.6S466.1 190 512 190s89.1 17.9 121.6 50.4S684 316.1 684 362c0 45.9-17.9 89.1-50.4 121.6S557.9 534 512 534z"
              />
            </svg>
          </span>
        </span>
        <span
          class="ant-typography"
          style="margin-left: 12px;"
        >
          <b>
            Teacher Name
          </b>
          布置的作业
        </span>
      </div>
    </div>
  </div>
</div>
`;
